--- a/src/main/resources/templates/layout.html
+++ b/src/main/resources/templates/layout.html
@@ -10,6 +10,17 @@
     <link rel="stylesheet" th:href="@{/css/style.css}">
 </head>
 <body>
+
+<!-- Bandeiras de idioma fixadas no canto superior direito -->
+<div style="position: fixed; top: 80px; right: 20px; z-index: 1050;">
+    <a th:href="@{''(lang=pt_BR)}">
+        <img alt="Português" th:src="@{/img/Brasil.gif}" style="width: 50px; margin-bottom: 5px;" />
+    </a>
+    <a th:href="@{''(lang=en_US)}">
+        <img alt="English" th:src="@{/img/EUA.gif}" style="width: 50px;" />
+    </a>
+</div>
+
 <header>
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
         <a class="navbar-brand" th:href="@{/}">GTest</a>
@@ -27,7 +38,6 @@
                 <li class="nav-item" sec:authorize="hasRole('ADMIN')">
                     <a class="nav-link" th:href="@{/admin/estrategias/listar}" th:text="#{admin.card.manageStrategies.button}">Gerenciar Estratégias</a>
                 </li>
-
 
                 <li class="nav-item" sec:authorize="hasRole('TESTER')">
                     <a class="nav-link" th:href="@{/testador/home}" th:text="#{nav.testador.home}">Dashboard Testador</a>
@@ -52,10 +62,7 @@
 
 <main role="main" class="container">
     <section layout:fragment="corpo">
-        <div style="right: 40px; position: absolute">
-            <a th:href="@{/lang=pt)}"><img alt="" th:src="@{/img/Brasil.gif}" style="width: 50px;" /></a>
-            <a th:href="@{/lang=en)}"><img alt="" th:src="@{/img/EUA.gif}" style="width: 50px;" /></a>
-        </div>
+        <!-- Conteúdo da página será inserido aqui -->
     </section>
 </main>
 
